# pyproject.toml

[project]
name = "applyaf"
version = "1.6.6"
description = "Apply antenna factors and cable loss to spectrum analyzer measurements"
readme = "README.md"
authors = [{ name = "Matthew Rankin", email = "matthew@questrail.com" }]
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.0"]
classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: MIT License',
  'Development Status :: 5 - Production/Stable',
  'Operating System :: OS Independent',
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

[project.urls]
Homepage = "https://github.com/questrail/applyaf"
Issues = "https://github.com/questrail/applyaf/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.nose2.coverage]
always-on = true

[tool.pyright]
include = ["src"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src/experimental",
  "src/typestubs",
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
venv = "applyaf"

reportMissingImports = false
reportMissingTypeStubs = false

pythonVersion = "3.8"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src/web", pythonVersion = "3.8", pythonPlatform = "Windows", extraPaths = [
    "src/service_libs",
  ] },
  { root = "src/sdk", pythonVersion = "3.8", extraPaths = [
    "src/backend",
  ] },
  { root = "src/tests", extraPaths = [
    "src/tests/e2e",
    "src/sdk",
  ] },
  { root = "src" },
]

[dependency-groups]
dev = [
    "nose2>=0.15.1",
]
